--- a/src/components/css/aiya/portfolio.css
+++ b/src/components/css/aiya/portfolio.css
@@ -1,3 +1,10 @@
-ul.blockspace div{
-    margin-right: 20px;
+.portfolioblock{
+    
+    display: flex;
+    justify-content: center;
+}
+
+.projectsquare{
+    margin: 20px;
+    
 }
