--- a/src/style.css
+++ b/src/style.css
@@ -114,15 +114,15 @@ a:hover {
 /* Sections */
 
 .sect-4 {
-  padding: 4rem 0;
+  padding: 2rem 0;
 }
 
 .sect-pt4 {
-  padding-top: 4rem;
+  padding-top: 2rem;
 }
 
 .sect-mt4 {
-  margin-top: 4rem;
+  margin-top: 1rem;
 }
 
 /* Title S */
@@ -136,11 +136,11 @@ a:hover {
 /* Title A */
 
 .title-box {
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 
 .title-a {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -159,7 +159,7 @@ a:hover {
 /* Title Left */
 
 .title-box-2 {
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 .title-left {
@@ -245,14 +245,14 @@ a:hover {
 /* Ico Circle */
 
 .ico-circle {
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   font-size: 2rem;
-  border-radius: 50%;
-  line-height: 1.55;
+  border-radius: 30%;
+  line-height: 1.45;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 5px #0078ff;
   display: block;
 }
 
@@ -299,7 +299,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #0078ff;
+  background-color: #00ffcc;
   opacity: .7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -548,7 +548,7 @@ NAVBAR
   display: block;
   background-color: #fff;
   height: 3px;
-  width: 25px;
+  width: 20px;
   margin-top: 4px;
   margin-bottom: 4px;
   -webkit-transform: rotate(0deg);
@@ -593,7 +593,7 @@ INTRO
 */
 
 .intro {
-  height: 100vh;
+  height: 80vh;
   position: relative;
   color: #fff;
 }
@@ -609,7 +609,7 @@ INTRO
   top: 0;
   left: 0px;
   padding: 0;
-  height: 100%;
+  height: 80%;
   width: 100%;
   opacity: .9;
 }
@@ -617,11 +617,11 @@ INTRO
 .intro .intro-title {
   color: #fff;
   font-weight: 600;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .intro .intro-subtitle {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 300;
 }
 
