--- a/src/style.css
+++ b/src/style.css
@@ -681,15 +681,25 @@ ABOUT
 }
 
 .skill-mf .progress {
-  background-color: #cde1f8;
-  margin: .5rem 0 1.2rem 0;
-  border-radius: 0;
-  height: .7rem;
+  height: 1rem;
+  background-color: #b5b5b5;
+  background-image: linear-gradient(187deg, #b5b5b5 0%, #fff 88%);
+  
+  box-shadow: 5px 5px 10px 0 #b5b5b5 inset,
+    -5px -5px 10px 0 #ffffff inset;
+  
+    margin: .5rem 0 1.2rem 0;
+  border-radius: 1rem;
+  
 }
 
 .skill-mf .progress .progress-bar {
-  height: .7rem;
-  background-color: #0078ff;
+  height: 1rem;
+
+  background-color: #edf4fc;
+  box-shadow: 
+    5px 5px 10px 0 rgba(255, 255, 255, 0.3) inset,
+    -5px -5px 10px 0 rgba(0, 0, 0, .25) inset;
 }
 
 /*
