--- a/src/style.css
+++ b/src/style.css
@@ -680,8 +680,14 @@ ABOUT
   color: #4e4e4e;
 }
 
+@keyframes bar-growing {
+  from { width: 0%; }
+  to {width: 80% }
+}
+
 .skill-mf .progress {
   height: 1rem;
+  
   background-color: #b5b5b5;
   background-image: linear-gradient(187deg, #b5b5b5 0%, #fff 88%);
   
@@ -695,11 +701,18 @@ ABOUT
 
 .skill-mf .progress .progress-bar {
   height: 1rem;
-
+  
   background-color: #edf4fc;
   box-shadow: 
     5px 5px 10px 0 rgba(255, 255, 255, 0.3) inset,
     -5px -5px 10px 0 rgba(0, 0, 0, .25) inset;
+  
+  transition: 3s ease-in;
+  animation: bar-growing 5s;
+}
+.skill-mf .progress-bar:hover {
+  height: 1.5rem;
+  transition: 1s ease-in;
 }
 
 /*
