--- a/src/components/css/aiya/style.css
+++ b/src/components/css/aiya/style.css
@@ -10,7 +10,7 @@ ul.portfolio-image {
   
   position: relative;
   width: 100%;
-  
+  border-radius: 10px;
 }
 ul.portfolio-image li {
   
@@ -20,16 +20,20 @@ ul.portfolio-image li {
   display: inline-block;
   overflow: hidden;
   padding-top: 30%;
+  border-radius: 10px;
 }
 ul.portfolio-image li:hover {
   cursor: pointer;
+  border-radius: 10px;
 }
 ul.portfolio-image li:hover img {
   -webkit-filter: grayscale(20%);
   transform: scale(1.15);
+  border-radius: 10px;
 }
 ul.portfolio-image li:hover .image-bg {
   opacity: 1;
+  border-radius: 10px;
 }
 ul.portfolio-image li:hover .description-wrap {
   background: rgba(13, 100, 240, 0.6);
@@ -77,6 +81,7 @@ ul.portfolio-image li .image-bg {
   letter-spacing: 1.5px;
   font-weight: 300;
   color: transparent;
+  
 }
 ul.portfolio-image li .desc {
   position: absolute;
@@ -89,11 +94,16 @@ ul.portfolio-image li .desc {
   color: #2f2f2f;
   font-size: 14px;
   font-weight: 700;
+  border-radius: 10px;
 }
 .primary_btn {
   display: inline-block;
-  background: linear-gradient(to right, #1345e6 0%, #009688 51%, #1345e6 100%);
-  color: #fff;
+  /*background: linear-gradient(to right, #1345e6 0%, #009688 51%, #1345e6 100%);*/
+  background-color: #edf4fc;
+  box-shadow: 
+    5px 5px 10px 0 rgba(255, 255, 255, 0.3) inset,
+    -5px -5px 10px 0 rgba(0, 0, 0, .25) inset;
+  color: #000;
   letter-spacing: 0px;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -111,5 +121,5 @@ ul.portfolio-image li .desc {
 
 .primary_btn:hover {
   background-position: right center;
-  color: #fff;
+  color: #b5b5b5;
 }
