--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ a {
 }
 
 a:hover {
-  color: #0078ff;
+  color: #000;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -31,7 +31,7 @@ a:hover {
 }
 
 .color-a {
-  color: #0078ff;
+  color: #000;
 }
 
 .color-d {
@@ -82,7 +82,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #000;
 }
 
 .overlay-mf {
@@ -152,7 +152,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #000;
   margin: 0 auto;
 }
 
@@ -171,7 +171,7 @@ a:hover {
   content: '';
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #000;
   width: 100px;
   bottom: -12px;
 }
@@ -208,12 +208,12 @@ a:hover {
   border-radius: 50%;
   line-height: 1.4;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #000;
   transition: all 500ms ease;
 }
 
 .socials .ico-circle:hover {
-  background-color: #0078ff;
+  background-color: #000;
   color: #fff;
   box-shadow: 0 0 0 3px #cde1f8;
   transition: all 500ms ease;
@@ -238,7 +238,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #0078ff;
+  color: #000;
   margin-right: 10px;
 }
 
@@ -252,7 +252,7 @@ a:hover {
   line-height: 1.45;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 5px #0078ff;
+  box-shadow: 0 0 0 5px #000;
   display: block;
 }
 
@@ -318,7 +318,7 @@ a:hover {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #0078ff;
+  background: #000;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -356,7 +356,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #000;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -415,6 +415,7 @@ NAVBAR
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
+  font-family: "Roboto";
 }
 
 .navbar-b.navbar-trans .nav-link:before,
@@ -473,26 +474,26 @@ NAVBAR
 }
 
 .navbar-b.navbar-reduce .nav-link {
-  color: #0078ff;
+  color: #000;
 }
 
 .navbar-b.navbar-reduce .nav-link:before {
-  background-color: #0078ff;
+  background-color: #000;
 }
 
 .navbar-b.navbar-reduce .nav-link:hover {
-  color: #0078ff;
+  color: #000;
 }
 
 .navbar-b.navbar-reduce .show > .nav-link,
 .navbar-b.navbar-reduce .active > .nav-link,
 .navbar-b.navbar-reduce .nav-link.show,
 .navbar-b.navbar-reduce .nav-link.active {
-  color: #0078ff;
+  color: #000;
 }
 
 .navbar-b.navbar-reduce .navbar-brand {
-  color: #0078ff;
+  color: #000;
 }
 
 .navbar-b.navbar-reduce .navbar-toggler span {
@@ -524,13 +525,13 @@ NAVBAR
 }
 
 .navbar-b .dropdown-menu .dropdown-item:hover {
-  background-color: #0078ff;
+  background-color: #000;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .navbar-b .dropdown-menu .dropdown-item.active {
-  background-color: #0078ff;
+  background-color: #000;
 }
 
 /* Hamburger Navbar */
@@ -644,7 +645,7 @@ INTRO
 
 .intro-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #000;
 }
 
 .intro-single .breadcrumb .breadcrumb-item:before {
@@ -666,6 +667,7 @@ ABOUT
 .about-mf .box-shadow-full {
   padding-top: 4rem;
   padding-bottom: 4rem;
+  border-radius: 2rem
 }
 
 .about-mf .about-img {
@@ -750,17 +752,17 @@ PORTFOLIO
 }
 
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #000;
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #000;
   float: right;
 }
 
 .work-content .w-like a {
-  color: #0078ff;
+  color: #000;
 }
 
 .work-content .w-like .num-like {
@@ -803,7 +805,7 @@ TESTIMONIALS
 
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #0078ff;
+  color: #000;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -844,8 +846,8 @@ CONTACT
 */
 
 #sendmessage {
-  color: #0078ff;
-  border: 1px solid #0078ff;
+  color: #000;
+  border: 1px solid #000;
   display: none;
   text-align: center;
   padding: 15px;
@@ -908,7 +910,7 @@ BUTTON
 }
 
 .button-a {
-  background-color: #0078ff;
+  background-color: #000;
   color: #fff;
   border-color: #cde1f8;
 }
@@ -967,19 +969,23 @@ BUTTON
   }
 
   .intro .intro-title {
-    font-size: 4.5rem;
+    font-size: 3rem;
+    font-family: "Roboto";
   }
 
   .intro .intro-subtitle {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    font-family: "Roboto";
   }
 
   .intro-single .intro-title {
     font-size: 3.5rem;
+    font-family: "Roboto";
   }
 
   .testimonial-box .description {
     padding: 0 5rem;
+    font-family: "Roboto";
   }
 
   .post-box,
